[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routerify = "3"
routerify-json-response = "3"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
lazy_static = "1.4.0"
url = { version = "2", features = ["serde"] }
log = "0.4.0"
env_logger = "0.9.0"
